2015-06-19  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented ifa.

	* share/txr/stdlib/ifa.tl: Tightened up the tests for
	situations when the macro is ill-formed, following
	the improved specification. Also, eval-error is thrown
	instead of just error.

2015-06-19  Kaz Kylheku  <kaz@kylheku.com>

	Test ifa macro.

	* Makefile (TEST_OUT): Include .tl files.
	(tst/%.out): New rule variant, from .tl prerequisite.

	* tests/012/ifa.expected: New file.

	* tests/012/ifa.tl: New file.

2015-06-19  Kaz Kylheku  <kaz@kylheku.com>

	* parser.c (parser_mark): Do not mark p->syntax_tree if
	its value is nao. Introduced on 2015-06-10, "Error handling improvement
	in read".

2015-06-18  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (mkstring): Fix neglect to null terminate.

2015-06-18  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (cat_str): Detect overflow in the total length
	calculation.

2015-06-18  Kaz Kylheku  <kaz@kylheku.com>

	Improvements in equal hashing function.

	* hash.c (equal_hash): For conses and vectors, ensure that
	distinct permutations lead to different hash codes.  This is done by
	accumulating the partial hash with a multiplier, rather than just
	adding subhashes.

2015-06-18  Kaz Kylheku  <kaz@kylheku.com>

	Library .txr files become .tl and are autoloaded.

	* lisplib.c (ver_set_entries, ver_instantiate,
	txr_case_set_entries, txr_case_instantiate): New
	static functions.
	(lisplib_init): Register new functions.

	* share/txr/stdlib/txr-case.txr: Reduced to a load for the
	corresponding .tl file, retained for backward compatibility.

	* share/txr/stdlib/ver.txr: Likewise.

	* share/txr/stdlib/txr-case.tl: New file, based on previous
	contents of corresponding .txr file.

	* share/txr/stdlib/ver.tl: Likewise.

2015-06-17  Kaz Kylheku  <kaz@kylheku.com>

	Adding anaphoric ifa macro.

	* Makefile (install): Install .tl files present in stdlib directory.
	(INSTALL): Handle argument 2 being a list.

	* eval.c (load): New function.

	* eval.h (load): Declared.
